--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foddies">
-        <activity android:name=".PhoneRegisterActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".PhoneRegisterActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".EmailRegisterActivity" />
         <activity android:name=".MainActivity" />
